Fixed video screen collapsing when no content.
- Added JP logo (pls no copyright).

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -437,6 +437,7 @@ body {
 
 .control-panel__video-screen {
   margin-bottom: 10px;
+  min-height: 267px;
 }
 
 .video-screen {
@@ -445,6 +446,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 50px 20px;
+  height: 100%;
 }
 
 .video-screen__loading-spinner {
@@ -516,6 +518,7 @@ body {
 #video-screen__reboot {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .video-screen__info-text {
